force-app/main/default/objects/uNI_PortfolioOutcomes__c/uNI_PortfolioOutcomes__c.object-meta.xml
<CustomObject>
    <label>Portfolio Outcome</label>
    <nameField>
        <displayFormat>O/C-{0000}</displayFormat>
        <label>Portfolio Outcomes Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Portfolio Outcomes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>