force-app/main/default/objects/uNI_PortfolioOutcomes__c/fields/uNI_Contributions__c.field-meta.xml
<CustomField>
    <fullName>uNI_Contributions__c</fullName>
    <label>Contributions</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>