force-app/main/default/objects/uNI_PortfolioOutcomes__c/fields/uNI_ExpectedResults__c.field-meta.xml
<CustomField>
    <fullName>uNI_ExpectedResults__c</fullName>
    <label>Expected results</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>