force-app/main/default/objects/uNI_PortfolioOutcomes__c/fields/uNI_Logframe__c.field-meta.xml
<CustomField>
    <fullName>uNI_Logframe__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Logframe</label>
    <referenceTo>uNI_Logframe__c</referenceTo>
    <relationshipLabel>Portfolio Outcomes</relationshipLabel>
    <relationshipName>Portfolio_Outcomes</relationshipName>
    <type>Lookup</type>
</CustomField>