force-app/main/default/objects/uNI_PortfolioOutcomes__c/fields/uNI_LogframeVersion__c.field-meta.xml
<CustomField>
    <fullName>uNI_LogframeVersion__c</fullName>
    <description>value LogframeVersion same as value LogframeVersion in logframe to handle the versioning</description>
    <label>Logframe Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>