force-app/main/default/objects/uNI_PortfolioOutcomes__c/fields/uNI_Outcome__c.field-meta.xml
<CustomField>
    <fullName>uNI_Outcome__c</fullName>
    <label>Outcome</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>