force-app/main/default/objects/uNI_PortfolioOutcomes__c/fields/uNI_OutcomeTitle__c.field-meta.xml
<CustomField>
    <fullName>uNI_OutcomeTitle__c</fullName>
    <label>Outcome Title</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>