force-app/main/default/objects/uNI_PortfolioOutcomes__c/fields/uNI_ResponseBy__c.field-meta.xml
<CustomField>
    <fullName>uNI_ResponseBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Response by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>uNI_PortfolioOutcomes</relationshipName>
    <type>Lookup</type>
</CustomField>